# wl-proxy

./: .gitignore  .gitmodules  Cargo.toml  README.md
apps/log-dmabuf-feedback/: Cargo.toml  README.md
apps/log-dmabuf-feedback/src/: cli.rs  hf.rs  libdrm.rs  main.rs
apps/wl-cm-filter/: Cargo.toml  README.md
apps/wl-cm-filter/src/: cli.rs  cm.rs  main.rs
examples/window-to-tray/: Cargo.toml  README.md
examples/window-to-tray/src/: cli.rs  icon.rs  main.rs  wtt.rs
examples/wl-format-filter/: Cargo.toml
examples/wl-format-filter/src/: cli.rs
examples/wl-paper/: Cargo.toml  README.md
examples/wl-paper/src/: cli.rs  main.rs  paper.rs
wl-proxy/: Cargo.toml
wl-proxy/src/: acceptor.rs  baseline.rs  baselines.rs  client.rs  endpoint.rs  fixed.rs  free_list.rs  generated.rs  generated_helper.rs  global_filter.rs  global_mapper.rs  handler.rs  lib.rs  main.rs  object.rs  object_error.rs  poll.rs  protocol_filter.rs  protocol_helpers.rs  protocols.rs  proxy.rs  simple.rs  state.rs  tests.rs  trans.rs  utils.rs  wire.rs
wl-proxy/src/baseline/: versions.rs
wl-proxy/src/baseline/versions/: prototyping.rs  prototyping.txt  v4.rs  v4.txt
wl-proxy/src/baselines/: versions.rs
wl-proxy/src/baselines/versions/: prototyping.rs
wl-proxy/src/client/: tests.rs
wl-proxy/src/endpoint/: tests.rs
wl-proxy/src/global_filter/: prototyping.rs
wl-proxy/src/global_mapper/: tests.rs
wl-proxy/src/object/: tests.rs
wl-proxy/src/poll/: tests.rs
wl-proxy/src/protocol_filter/: prototyping.rs
wl-proxy/src/protocols/: alpha_modifier_v1.rs  color_management_v1.rs  color_representation_v1.rs  commit_timing_v1.rs  content_type_v1.rs  cosmic_corner_radius_v1.rs  cosmic_keyboard_layout_unstable_v1.rs  cursor_shape_v1.rs  drm.rs  drm_lease_v1.rs  ext_background_effect_v1.rs  ext_data_control_v1.rs  ext_foreign_toplevel_list_v1.rs  ext_idle_notify_v1.rs  ext_image_capture_source_v1.rs  ext_image_copy_capture_v1.rs  ext_session_lock_v1.rs  ext_transient_seat_v1.rs  ext_workspace_v1.rs  fifo_v1.rs  fractional_scale_v1.rs  fullscreen_shell_unstable_v1.rs  hyprland_ctm_control_v1.rs  hyprland_focus_grab_v1.rs  hyprland_global_shortcuts_v1.rs  hyprland_input_capture_v1.rs  hyprland_lock_notify_v1.rs  hyprland_surface_v1.rs  hyprland_toplevel_export_v1.rs  hyprland_toplevel_mapping_v1.rs  idle_inhibit_unstable_v1.rs  input_method_unstable_v1.rs  input_method_unstable_v2.rs  input_timestamps_unstable_v1.rs  ivi_application.rs  ivi_hmi_controller.rs  jay_popup_ext_v1.rs  jay_tray_v1.rs  keyboard_shortcuts_inhibit_unstable_v1.rs  linux_dmabuf_v1.rs  (+72 more)
wl-proxy/src/protocols/alpha_modifier_v1/: wp_alpha_modifier_surface_v1.rs  wp_alpha_modifier_v1.rs
wl-proxy/src/protocols/color_management_v1/: wp_color_management_output_v1.rs  wp_color_management_surface_feedback_v1.rs  wp_color_management_surface_v1.rs  wp_color_manager_v1.rs  wp_image_description_creator_icc_v1.rs  wp_image_description_creator_params_v1.rs  wp_image_description_info_v1.rs  wp_image_description_reference_v1.rs  wp_image_description_v1.rs
wl-proxy/src/protocols/color_representation_v1/: wp_color_representation_manager_v1.rs  wp_color_representation_surface_v1.rs
wl-proxy/src/protocols/commit_timing_v1/: wp_commit_timer_v1.rs  wp_commit_timing_manager_v1.rs
wl-proxy/src/protocols/content_type_v1/: wp_content_type_manager_v1.rs  wp_content_type_v1.rs
wl-proxy/src/protocols/cosmic_a11y_v1/: cosmic_a11y_manager_v1.rs
wl-proxy/src/protocols/cosmic_corner_radius_v1/: cosmic_corner_radius_layer_v1.rs  cosmic_corner_radius_manager_v1.rs  cosmic_corner_radius_toplevel_v1.rs
wl-proxy/src/protocols/cosmic_image_source_unstable_v1/: zcosmic_workspace_image_capture_source_manager_v1.rs
wl-proxy/src/protocols/cosmic_keyboard_layout_unstable_v1/: zcosmic_keyboard_layout_manager_v1.rs  zcosmic_keyboard_layout_v1.rs
wl-proxy/src/protocols/cosmic_output_management_unstable_v1/: zcosmic_output_configuration_head_v1.rs  zcosmic_output_configuration_v1.rs  zcosmic_output_head_v1.rs  zcosmic_output_manager_v1.rs
wl-proxy/src/protocols/cosmic_overlap_notify_unstable_v1/: zcosmic_overlap_notification_v1.rs  zcosmic_overlap_notify_v1.rs
wl-proxy/src/protocols/cosmic_workspace_unstable_v2/: zcosmic_workspace_handle_v2.rs  zcosmic_workspace_manager_v2.rs
wl-proxy/src/protocols/cursor_shape_v1/: wp_cursor_shape_device_v1.rs  wp_cursor_shape_manager_v1.rs
wl-proxy/src/protocols/drm/: wl_drm.rs
wl-proxy/src/protocols/drm_lease_v1/: wp_drm_lease_connector_v1.rs  wp_drm_lease_device_v1.rs  wp_drm_lease_request_v1.rs  wp_drm_lease_v1.rs
wl-proxy/src/protocols/ext_background_effect_v1/: ext_background_effect_manager_v1.rs  ext_background_effect_surface_v1.rs
wl-proxy/src/protocols/ext_data_control_v1/: ext_data_control_device_v1.rs  ext_data_control_manager_v1.rs  ext_data_control_offer_v1.rs  ext_data_control_source_v1.rs
wl-proxy/src/protocols/ext_foreign_toplevel_list_v1/: ext_foreign_toplevel_handle_v1.rs  ext_foreign_toplevel_list_v1.rs
wl-proxy/src/protocols/ext_idle_notify_v1/: ext_idle_notification_v1.rs  ext_idle_notifier_v1.rs
wl-proxy/src/protocols/ext_image_capture_source_v1/: ext_foreign_toplevel_image_capture_source_manager_v1.rs  ext_image_capture_source_v1.rs  ext_output_image_capture_source_manager_v1.rs
wl-proxy/src/protocols/ext_image_copy_capture_v1/: ext_image_copy_capture_cursor_session_v1.rs  ext_image_copy_capture_frame_v1.rs  ext_image_copy_capture_manager_v1.rs  ext_image_copy_capture_session_v1.rs
wl-proxy/src/protocols/ext_session_lock_v1/: ext_session_lock_manager_v1.rs  ext_session_lock_surface_v1.rs  ext_session_lock_v1.rs
wl-proxy/src/protocols/ext_transient_seat_v1/: ext_transient_seat_manager_v1.rs  ext_transient_seat_v1.rs
wl-proxy/src/protocols/ext_workspace_v1/: ext_workspace_group_handle_v1.rs  ext_workspace_handle_v1.rs  ext_workspace_manager_v1.rs
wl-proxy/src/state/: builder.rs  tests.rs
wl-proxy/src/test_framework/: proxy.rs  server.rs
wl-proxy/src/trans/: tests.rs
wl-proxy/src/utils/: env.rs  free_list.rs  handler_holder.rs  stack.rs  stash.rs  xrd.rs
(+403 files in other folders)
